--- a/src/config/server.properties
+++ b/src/config/server.properties
@@ -1,9 +1,11 @@
 time=100
 server_width=800
 server_height=500
-title=\u6e29\u5ba4
+title=GreenHouseServer
 command_control=control
 command_update=update
 command_getdata=getdata
 isTrue=1
 isFalse=0
+initRandom=50
+port=8888
